--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,19 +7,19 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<div class="wrapper">
+<!-- <div class="wrapper">
   <app-sidebar></app-sidebar>
-  <div class="main-panel">
+  <div class="main-panel"> -->
       <!-- Navbar -->
-      <app-header></app-header>
+      <!-- <app-header></app-header> -->
       <!-- End Navbar -->
       
-      <app-content></app-content>
+      <!-- <app-content></app-content>
 
 
       <app-footer></app-footer>
       
   </div>
-</div>
+</div> -->
 
 <router-outlet></router-outlet>
