--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,5 +1,8 @@
-<ul>
+<!-- <ul>
     <li *ngFor="let item of itemList | async">
       {{ item.name }}
     </li>
-  </ul>
+  </ul> -->
+  
+
+<router-outlet></router-outlet>
