--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@ Tip 2: you can also add an image using data-image tag
                 </a>
             </li>
             <li>
-                <a class="nav-link" href="./table.html">
+                <a class="nav-link" href="/home/admin/user">
                     <i class="nc-icon nc-notes"></i>
                     <p>Table List</p>
                 </a>
