--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,93 @@
-<p>user works!</p>
+<div class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card strpied-tabled-with-hover">
+                    <div class="card-header ">
+                        <h4 class="card-title">Danh sách tài khoản</h4>
+                    </div>
+                    <div class="card-body table-full-width table-responsive">
+                        <table class="table table-hover table-striped">
+                            <thead>
+                                <th>Họ và tên</th>
+                                <th>Email</th>
+                                <th>Số điện thoại</th>
+                                <th>Giới tính</th>
+                                <th>Ngày sinh</th>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor = "let user of users">
+                                    <td>{{user.payload.doc.data().username}}</td>
+                                    <td>{{user.payload.doc.data().email}}</td>
+                                    <td>{{user.payload.doc.data().sodienthoai}}</td>
+                                    <td>{{user.payload.doc.data().gioitinh}}</td>
+                                    <td>{{user.payload.doc.data().ngaysinh}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="card-title">Tạo tài khoản</h4>
+                    </div>
+                    <div class="card-body">
+
+                            <div class="row">
+                                <div class="col-md-6 pr-1">
+                                    <div class="form-group">
+                                        <label>Email</label>
+                                        <input [(ngModel)] = "user.email" type="text" class="form-control" placeholder="e.g example@email.com">
+                                    </div>
+                                </div>
+                                <div class="col-md-6 pl-1">
+                                    <div class="form-group">
+                                        <label>Họ và tên</label>
+                                        <input [(ngModel)] = "user.username" type="text" class="form-control" placeholder="e.g Sonthach">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12 pr-1">
+                                    <div class="form-group">
+                                        <label>Số điện thoại</label>
+                                        <input [(ngModel)] = "user.sodienthoai" type="text" class="form-control" placeholder="e.g 123456789">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6 pr-1">
+                                    <div class="form-group">
+                                        <label>Ngày sinh</label>
+                                        <input [(ngModel)] = "user.ngaysinh" type="text" class="form-control" placeholder="e.g 18/12/1998">
+                                    </div>
+                                </div>
+                                <div class="col-md-6 pr-1">
+                                        <div class="form-group">
+                                            <label>Giới tính</label>
+                                            <input [(ngModel)] = "user.gioitinh" type="text" class="form-control" placeholder="e.g Nam">
+                                        </div>
+                                    </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label>Địa chỉ</label>
+                                        <input [(ngModel)] = "user.diachi" type="text" class="form-control" placeholder="An Giang">
+                                    </div>
+                                </div>
+                            </div>
+                            <button type="submit" (click) = "createUser()" class="btn btn-info btn-fill pull-right"> TẠO</button>
+                            <div class="clearfix"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+
+        </div>
+    </div>
+</div>
