Hoan thanh chuc nang them san pham + get san pham tuong tac voi server

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -18,15 +18,15 @@ Tip 2: you can also add an image using data-image tag
                 </a>
             </li>
             <li>
-                <a class="nav-link" href="./user.html">
+                <a class="nav-link" href="/home/admin/user">
                     <i class="nc-icon nc-circle-09"></i>
-                    <p>User Profile</p>
+                    <p>Tài khoản</p>
                 </a>
             </li>
             <li>
-                <a class="nav-link" href="/home/admin/user">
-                    <i class="nc-icon nc-notes"></i>
-                    <p>Table List</p>
+                <a class="nav-link" href="/home/admin/product">
+                    <i class="nc-icon nc-notes"></i>                    
+                    <p>Sản phẩm</p>
                 </a>
             </li>
             <li>
