--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,1 +1,89 @@
-<p>book works!</p>
+<div class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card strpied-tabled-with-hover">
+                    <div class="card-header ">
+                        <h4 class="card-title">Danh sách Sản phẩm</h4>
+                    </div>
+                    <div class="card-body table-full-width table-responsive">
+                        <table id="datatables" class="table table-hover table-striped">
+                            <thead>
+                                <tr>
+                                        <th>Tên Sách</th>
+                                        <th>Ngày phát hành</th>
+                                        <th>Thể loại</th>
+                                        <th>Giá tiền</th>
+                                        <th>Tác giả</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="card-title">Thêm Sản phẩm</h4>
+                    </div>
+                    <div class="card-body">
+                        <form [formGroup]="ngForm" novalidate>
+                            <div class="row">
+                                <div class="col-md-6 pr-1">
+                                    <div class="form-group">
+                                        <label>Tên Sách</label>
+                                        <input formControlName="tensach" [(ngModel)] = "book.tensach" type="text" class="form-control" placeholder="IT">
+                                    </div>
+                                </div>
+                                <div class="col-md-6 pl-1">
+                                    <div class="form-group">
+                                        <label>Ngày phát hành</label>
+                                        <input formControlName="ngayphathanh" [(ngModel)] = "book.ngayphathanh" type="text" class="form-control" placeholder="2001">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12 pr-1">
+                                    <div class="form-group">
+                                        <label>Thể loại</label>
+                                        <select formControlName="theloai" [(ngModel)] = "book.theloai" type="text" class="form-control" placeholder="Lập trình">
+                                            <option *ngFor="let cate of theloai">{{cate}}</option> </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6 pr-1">
+                                    <div class="form-group">
+                                        <label>Giá tiền</label>
+                                        <input formControlName="giatien" [(ngModel)] = "book.giatien" type="text" class="form-control" placeholder="2000000">
+                                    </div>
+                                </div>
+                                <div class="col-md-6 pr-1">
+                                        <div class="form-group">
+                                            <label>Tác giả</label>
+                                            <input formControlName="tacgia" [(ngModel)] = "book.tacgia" type="text" class="form-control" placeholder="Sonthach">
+                                        </div>
+                                    </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label>Mô tả</label>
+                                        <input formControlName="mota" [(ngModel)] = "book.mota" type="text" class="form-control" placeholder="Mô tả">
+                                    </div>
+                                </div>
+                            </div>
+                            <button [disabled]="ngForm.pristine || ngForm.invalid" type="submit" (click) = "createBook()" class="btn btn-info btn-fill pull-right"> TẠO</button>
+                            <div class="clearfix"></div>
+                            </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+        </div>
+    </div>
+</div>
