xong chuc nang login with google + can activity

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -15,6 +15,7 @@
                                         <th>Thể loại</th>
                                         <th>Giá tiền</th>
                                         <th>Tác giả</th>
+                                        <th>Trạng thái</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -24,7 +25,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div *ngIf="checktao" class="col-md-6">
                 <div class="card">
                     <div class="card-header">
                         <h4 class="card-title">Thêm Sản phẩm</h4>
@@ -49,11 +50,22 @@
                                 <div class="col-md-12 pr-1">
                                     <div class="form-group">
                                         <label>Thể loại</label>
-                                        <select formControlName="theloai" [(ngModel)] = "book.theloai" type="text" class="form-control" placeholder="Lập trình">
+                                        <select formControlName="theloai" [(ngModel)] = "book.theloai" type="text" class="form-control">
                                             <option *ngFor="let cate of theloai">{{cate}}</option> </select>
                                     </div>
                                 </div>
                             </div>
+
+                            <div class="row">
+                                    <div class="col-md-12 pr-1">
+                                        <div class="form-group">
+                                            <label>Thể loại</label>
+                                            <select formControlName="trangthai" [(ngModel)] = "book.trangthai" type="text" class="form-control">
+                                                <option *ngFor="let st of trangthai">{{st}}</option> </select>
+                                        </div>
+                                    </div>
+                                </div>
+                            
                             <div class="row">
                                 <div class="col-md-6 pr-1">
                                     <div class="form-group">
@@ -76,12 +88,81 @@
                                     </div>
                                 </div>
                             </div>
-                            <button [disabled]="ngForm.pristine || ngForm.invalid" type="submit" (click) = "createBook()" class="btn btn-info btn-fill pull-right"> TẠO</button>
+                            <button [disabled]="ngForm.pristine || ngForm.invalid" type="submit" (click) = "createBook()" class="btn btn-info btn-fill pull-right"> LƯU</button>
                             <div class="clearfix"></div>
                             </form>
                     </div>
                 </div>
             </div>
+
+            <div *ngIf = "checksua" class="col-md-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4 class="card-title">Sửa/Xóa Sản phẩm</h4>
+                        </div>
+                        <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-6 pr-1">
+                                        <div class="form-group">
+                                            <label>Tên Sách</label>
+                                            <input  [(ngModel)] = "book.tensach" type="text" class="form-control" placeholder="IT">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 pl-1">
+                                        <div class="form-group">
+                                            <label>Ngày phát hành</label>
+                                            <input  [(ngModel)] = "book.ngayphathanh" type="text" class="form-control" placeholder="2001">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12 pr-1">
+                                        <div class="form-group">
+                                            <label>Thể loại</label>
+                                            <select  [(ngModel)] = "book.theloai" type="text" class="form-control">
+                                                <option *ngFor="let cate of theloai">{{cate}}</option> </select>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                        <div class="col-md-12 pr-1">
+                                            <div class="form-group">
+                                                <label>Trạng thái</label>
+                                                <select  [(ngModel)] = "book.trangthai" type="text" class="form-control">
+                                                    <option *ngFor="let st of trangthai">{{st}}</option> </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                <div class="row">
+                                    <div class="col-md-6 pr-1">
+                                        <div class="form-group">
+                                            <label>Giá tiền</label>
+                                            <input  [(ngModel)] = "book.giatien" type="text" class="form-control" placeholder="2000000">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 pr-1">
+                                            <div class="form-group">
+                                                <label>Tác giả</label>
+                                                <input  [(ngModel)] = "book.tacgia" type="text" class="form-control" placeholder="Sonthach">
+                                            </div>
+                                        </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label>Mô tả</label>
+                                            <input [(ngModel)] = "book.mota" type="text" class="form-control" placeholder="Mô tả">
+                                        </div>
+                                    </div>
+                                </div>
+                                <button  type="submit" (click) = "back()" class="btn btn-info btn-fill pull-left"> THÊM</button>
+                                <button  type="submit" (click) = "modifyBook()" class="btn btn-info btn-fill pull-right"> SỬA</button>
+                                <button  style ="margin-right: 10px" type="submit" (click) = "deleteBook()" class="btn btn-info btn-fill pull-right"> XÓA</button>
+                                <div class="clearfix"></div>
+                        </div>
+                    </div>
+                </div>
         </div>
         <div class="row">
         </div>
