--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -6,6 +6,12 @@
                     <div class="card-header ">
                         <h4 class="card-title">Danh sách Sản phẩm</h4>
                     </div>
+                    <div class="row">
+                        <div style="margin-left : 100px" *ngFor="let item of trangthai"class="col-md-4">
+                            <input (click)="filter($event, item)" type="checkbox"  />{{item}}
+                          </div>
+                    </div>
+                    
                     <div class="card-body table-full-width table-responsive">
                         <table id="datatables" class="table table-hover table-striped">
                             <thead>
